Fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
     padding: 0;
     background-color: #fff;
     counter-reset: titleCounter;
+    overflow-x: hidden;
 }
 
 .hidden {
@@ -1284,12 +1285,12 @@ stroke: #fff;
 
 .fs {
     flex-direction: column;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     justify-content: center;
     z-index: 5;
     background-color: #000;
-    padding: 20px;
+    padding: 20px 0;
 }
 
 .fs.fs-underlay {
